Add PostHog reverse proxy and marketing SEO instrumentation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,67 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ReturnShield</title>
+    <title>ReturnShield | Turn Returns Into Exchanges</title>
+    <meta
+      name="description"
+      content="ReturnShield transforms refund chaos into exchange wins for Shopify, BigCommerce, and WooCommerce brands. Unlock automation, protect margin, and delight VIP customers."
+    />
+    <meta
+      name="keywords"
+      content="returns automation, returnless refunds, exchange automation, ecommerce retention, Shopify returns, BigCommerce returns, WooCommerce returns"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#0f172a" />
+    <link rel="canonical" href="https://returnshield.app/" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="ReturnShield" />
+    <meta property="og:title" content="ReturnShield | Turn Returns Into Exchanges" />
+    <meta
+      property="og:description"
+      content="ReturnShield reveals why returns happen and automates exchanges so brands defend more revenue across Shopify, BigCommerce, and WooCommerce."
+    />
+    <meta property="og:url" content="https://returnshield.app/" />
+    <meta property="og:image" content="https://returnshield.app/vite.svg" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
+    <meta property="og:locale" content="en_US" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ReturnShield | Turn Returns Into Exchanges" />
+    <meta
+      name="twitter:description"
+      content="Automate exchange-first policies, protect margin, and keep VIP customers with ReturnShield."
+    />
+    <meta name="twitter:image" content="https://returnshield.app/vite.svg" />
+    <meta name="twitter:url" content="https://returnshield.app/" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "ReturnShield",
+        "applicationCategory": "BusinessApplication",
+        "operatingSystem": "Web",
+        "url": "https://returnshield.app/",
+        "description": "ReturnShield helps ecommerce brands convert refunds into loyal exchanges with AI-powered insights and automation.",
+        "offers": {
+          "@type": "Offer",
+          "price": "29.00",
+          "priceCurrency": "USD"
+        },
+        "creator": {
+          "@type": "Organization",
+          "name": "ReturnShield"
+        },
+        "audience": {
+          "@type": "BusinessAudience",
+          "industry": "Ecommerce",
+          "audienceType": ["Shopify brands", "BigCommerce brands", "WooCommerce brands"]
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
